creating SignUp Page, Api call and Auth Service in angular

--- a/E-commerce Front/front/src/app/app.component.html
+++ b/E-commerce Front/front/src/app/app.component.html
@@ -1,5 +1,6 @@
-<mat-toolbar style="background-color: bisque;" class="navbar">
-  <span class="navbar-brand">E-commerce</span>
+
+<mat-toolbar color="primary" class="navbar">
+  <span class="navbar-brand">Tienda Brazil</span>
   <span class="spacer"></span>
   <button mat-button routerLink="/order" routerLinkActive="active" >Track Order</button>
   <button mat-button routerLink="/signUp" routerLinkActive="active" >Register</button>
