--- a/E-commerce Front/front/src/app/app.component.html
+++ b/E-commerce Front/front/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<div *ngIf="!isCustomerLoggedIn && !isAdminLoggedIn">
 <mat-toolbar color="primary" class="navbar">
   <span class="navbar-brand">Tienda Brazil</span>
   <span class="spacer"></span>
@@ -6,4 +6,35 @@
   <button mat-button routerLink="/signUp" routerLinkActive="active" >Register</button>
   <button mat-button routerLink="/login" routerLinkActive="active" >Login</button>
 </mat-toolbar>
+</div>
+
+<div *ngIf="isAdminLoggedIn">
+  <mat-toolbar color="primary" class="navbar">
+    <span class="navbar-brand">Tienda Brazil</span>
+    <span class="spacer"></span>
+    <button mat-button routerLink="/admin/dashboard" routerLinkActive="active" >Dashboard</button>
+    <button mat-button routerLink="/admin/analytics" routerLinkActive="active" >Analytics</button>
+    <button mat-button routerLink="/admin/category" routerLinkActive="active" >Category</button>
+    <button mat-button routerLink="/admin/product" routerLinkActive="active" >Product</button>
+    <button mat-button routerLink="/admin/orders" routerLinkActive="active" >Orders</button>
+    <button mat-button routerLink="/admin/post-coupons" routerLinkActive="active" >Post Coupons</button>
+    <button mat-button routerLink="/admin/coupons" routerLinkActive="active" >Coupons</button>
+    <button mat-button routerLinkActive="active" (click)="logout()">Logout</button>
+  </mat-toolbar>
+  </div>
+
+  <div *ngIf="isCustomerLoggedIn">
+    <mat-toolbar color="primary" class="navbar">
+      <span class="navbar-brand">Tienda Brazil</span>
+      <span class="spacer"></span>
+      <button mat-button routerLink="/customers/dashboard" routerLinkActive="active" >Dashboard</button>
+      <button mat-button routerLink="/customers/cart" routerLinkActive="active" >Cart</button>
+      <button mat-button routerLink="/customers/my_orders" routerLinkActive="active" >Orders</button>
+      <button mat-button routerLink="/customers/wishlist" routerLinkActive="active" >Wishlist</button>
+      <button mat-button routerLink="/customers/profile" routerLinkActive="active" >Profile</button>
+      <button mat-button routerLinkActive="active" (click)="logout()">Logout</button>
+     
+    </mat-toolbar>
+    </div>
+
 <router-outlet></router-outlet>
